<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.gp.bce.AddCardManually">


    <ScrollView

        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/scrollView">

        <RelativeLayout

            android:id="@+id/addCardManually"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/card" />

            <TextView
                android:id="@+id/tvFName"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentLeft="true"
                android:text="@string/tv_first_name"
                android:layout_below="@+id/card" />

            <EditText
                android:id="@+id/etFName"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_alignBaseline="@+id/tvFName"
                android:layout_marginLeft="75dp" />

            <TextView
                android:id="@+id/tvLName"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/tvFName"
                android:layout_marginTop="30dp"
                android:text="@string/tv_last_name" />

            <EditText
                android:id="@+id/etLName"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_alignBaseline="@+id/tvLName"
                android:layout_marginLeft="75dp" />

            <TextView
                android:id="@+id/tvPhone"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/tvLName"
                android:layout_marginTop="30dp"
                android:text="@string/tv_phone" />

            <EditText
                android:id="@+id/etPhone"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_alignBaseline="@+id/tvPhone"
                android:layout_marginLeft="75dp"
                android:inputType="phone"/>

            <TextView
                android:id="@+id/tvEmail"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/tvPhone"
                android:layout_marginTop="30dp"
                android:text="@string/tv_email" />

            <EditText
                android:id="@+id/etEmail"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_alignBaseline="@+id/tvEmail"
                android:layout_marginLeft="75dp"
                android:inputType="textEmailAddress"/>

            <TextView
                android:id="@+id/tvAddress"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/tvEmail"
                android:layout_marginTop="30dp"
                android:text="@string/tv_address" />

            <EditText
                android:id="@+id/etAddress"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_alignBaseline="@+id/tvAddress"
                android:layout_marginLeft="75dp"
                android:inputType="textPostalAddress"/>

            <TextView
                android:id="@+id/tvCompany"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/tvAddress"
                android:layout_marginTop="30dp"
                android:text="@string/tv_company" />

            <EditText
                android:id="@+id/etCompany"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_alignBaseline="@+id/tvCompany"
                android:layout_marginLeft="75dp" />

            <TextView
                android:id="@+id/tvTitle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/tvCompany"
                android:layout_marginTop="30dp"
                android:text="@string/tv_title" />

            <EditText
                android:id="@+id/etTitle"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_alignBaseline="@+id/tvTitle"
                android:layout_marginLeft="75dp" />

            <TextView
                android:id="@+id/tvNote"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/tvTitle"
                android:layout_marginTop="30dp"
                android:text="@string/tv_note" />

            <EditText
                android:id="@+id/etNote"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_alignBaseline="@+id/tvNote"
                android:layout_marginLeft="75dp" />

            <TextView
                android:id="@+id/tvWebsite"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/tvNote"
                android:layout_marginTop="30dp"
                android:text="@string/tv_website" />

            <EditText
                android:id="@+id/etWebsite"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_alignBaseline="@+id/tvWebsite"
                android:layout_marginLeft="75dp"
                android:inputType="textWebEmailAddress"/>

            <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Choose design"
                android:id="@+id/button"
                android:layout_below="@id/tvWebsite"
                android:layout_alignParentBottom="true"
                android:layout_alignParentRight="true"
                android:layout_alignParentEnd="true"
                android:onClick="viewTemplates"
                android:layout_marginTop="20dp" />

        </RelativeLayout>

    </ScrollView>

</RelativeLayout>
